# rsws

./: .gitignore  key_positions.json  projected_points.npy
src/: README.md
src/Arm_Urdf/: CMakeLists.txt  package.xml
src/Arm_Urdf/config/: joint_trajectory_control.yaml  joint_trajectory_control_iiwa.yaml
src/Arm_Urdf/launch/: display.launch  gazebo.launch  new.launch
src/Arm_Urdf/scripts/: Full_IK.py  IK_gazebo.py  IK_set_point.py  IK_set_point_gazebo.py  IK_tracking.py  IK_velocity_constrained.py  distance_calc.py  multicontroller.py  test.ipynb  test.py
src/Arm_Urdf/urdf/: Arm_Urdf.csv  Arm_Urdf.urdf
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: Arm_Urdf.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/arm_moveit_config/launch/: final_arm_launch.launch  gazebo.launch  move_group.launch  moveit_updated.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/arm_moveit_config/script/: gripper_fingers.py  test.py
src/autonomous_typing/: CMakeLists.txt  package.xml
src/autonomous_typing/launch/: test.launch
src/autonomous_typing/src/: controller.py  keyboard_layout.json  keyboard_layout.npy  keyboard_typing.py  multicontroller.py  test.py  yolo_seg.py  yolo_seg_save.py
src/autonomous_typing/src/redundant_code/: a_bit_of_hardcoded.py  a_bit_of_hardcoded2.py  helper.py  image_preprocessing.py  keyboard_typer.py  template_matching.py
src/autonomous_typing/src/tools_to_hardcode_keyboard/: json_tonpy.py  point_marker.py  preprocessing.py
src/autonomous_typing/urdf/Razer_BlackWidow/: metadata.pbtxt  model.config  model.sdf
src/autonomous_typing/urdf/Razer_BlackWidow/meshes/: model.mtl
src/iiwa_description/launch/: l.launch
src/iiwa_description/scripts/: Full_IK.py  IK_gazebo.py  IK_gazebo_oldarm.py  teleop_arm.py
src/iiwa_description/urdf/: iiwa7.urdf
src/new_Arm_Urdf/: CMakeLists.txt  package.xml
src/new_Arm_Urdf/config/: joint_names_Arm_Urdf.yaml
src/new_Arm_Urdf/launch/: display.launch  gazebo.launch  new.launch
src/new_Arm_Urdf/meshes/: Gripper_1.STL  Link_2.STL  Link_3.STL  Link_5.STL
src/new_Arm_Urdf/scripts/: IK_gazebo.py
src/new_Arm_Urdf/urdf/: Arm_Urdf.csv  new_Arm_Urdf.urdf
src/stereo_vision/: CMakeLists.txt  package.xml
src/stereo_vision/launch/: box.launch  camera2.launch  camera_world.launch
src/stereo_vision/scripts/: detect_cylinder_xyz.py  gripper_position.py  opencv_code_for_red_ball_depth.py  red_sphere_xyz.py  yolo_stereo_depth.py  yolo_xyz.py
src/stereo_vision/teleop_moveit/: teleop.py
src/stereo_vision/urdf/: box.urdf  box_with_camera.urdf  box_with_camera2.urdf  box_with_camera_main_working.urdf  camera.urdf  red_sphere.urdf
src/teleop_arm/scripts/: IK_gazebo.py  jaco_pt2.py  moveit_teleop_niwesh.py  teleop_arm.py
src/teleop_arm/urdf/: cylinder.urdf
