<?xml version="1.0"?>
<package format="2">
  <name>Arm_Urdf</name>
  <version>0.0.0</version>
  <description>The Arm_Urdf package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="bhumika@todo.todo">bhumika</maintainer>

  <!-- License tag -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/Arm_Urdf</url> -->

  <!-- Author tags are optional, multiple are allowed -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <depend>rviz</depend>
  <depend>gazebo</depend>
  <depend>moveit_simple_controller_manager</depend>
  <!-- <depend>pinocchio</depend> -->


  <!-- Exported build dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>quadprog</exec_depend>
  <exec_depend>pyqt5</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
